Ajustando formatação monetária

--- a/financial-backend/.env
+++ b/financial-backend/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=postgresql://neondb_owner:npg_GJ0gHUuKidI5@ep-wispy-star-a8ijszq5-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
 JWT_SECRET=jAyoi96yThn7754Ponma341Kgfna
+# FRONTEND_DEV_URL="http://localhost:5173"
+FRONTEND_PROD_URL="https://mefinance.netlify.app"
